<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_drivincloud"
            android:layout_height="150dp" />

        <!-- Email Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direct_connect"
            android:layout_gravity="top|center_horizontal"
            android:textColor="@color/abc_secondary_text_material_light"
            android:textStyle="bold"
            android:textSize="@dimen/abc_text_size_title_material"
            android:layout_marginBottom="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/input_login_ssl"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:entries="@array/login_ssl_choices" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_login_hostname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="0dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_hostname"
                    android:inputType="textUri" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>




        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_login_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/prompt_login" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_password_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/prompt_password"/>
        </android.support.design.widget.TextInputLayout>


        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/remember_username"
            android:id="@+id/switch_save_username"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="12dp"
            android:text="@string/remember_password"
            android:id="@+id/switch_save_password"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/connexion"
            android:textColor="@android:color/white" />

        <TextView
            android:text="@string/create_account_link"
            android:id="@+id/create_account_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="?android:attr/textColorLink"
            android:textStyle="normal|bold"
            android:textAllCaps="true"
            android:textAlignment="viewStart"
            android:textSize="16sp"
            android:linksClickable="true"
            android:layout_marginBottom="24dp" />

    </LinearLayout>
</ScrollView>
